Fixed line-height of site title so menu would be aligned medium-up.

--- a/wp-content/themes/portfolio/assets/css/style.css
+++ b/wp-content/themes/portfolio/assets/css/style.css
@@ -4442,6 +4442,7 @@ header::after {
     .title-container {
       float: left; } }
   .title-container #site-title {
+    line-height: 1;
     font-size: 2.5rem;
     font-weight: bold;
     text-transform: uppercase;
@@ -4469,7 +4470,7 @@ header::after {
   position: initial;
   height: 0;
   overflow: hidden;
-  transition: height .5s;
+  transition: height 0.5s;
   margin: 0; }
   #menu-primary-navigation.mobile-menu-revealed {
     height: 120px;
@@ -4521,10 +4522,17 @@ header::after {
   text-transform: uppercase;
   max-width: 200px;
   margin: 0 auto 2rem; }
+  @media (min-width: 475px) and (max-width: 639px) {
+    .project-gallery .project-title {
+      font-size: 20px; } }
 
 footer p {
+  text-align: center;
   padding: 75px 0;
   color: #999999; }
+  @media (min-width: 640px) {
+    footer p {
+      text-align: left; } }
   footer p .bold {
     color: #111111; }
 
