--- a/wp-content/themes/portfolio/assets/scss/_home.scss
+++ b/wp-content/themes/portfolio/assets/scss/_home.scss
@@ -22,6 +22,9 @@
 		color: $project-thumbnail-title-color;
 		font-weight: 400;
 		font-size: 16px;
+		@media (min-width: 475px) and (max-width: 639px) {
+			font-size: 20px;
+		}
 		line-height: 1;
 		text-align: center;
 		text-transform: uppercase;
