--- a/wp-content/themes/portfolio/assets/scss/_navigation.scss
+++ b/wp-content/themes/portfolio/assets/scss/_navigation.scss
@@ -24,6 +24,7 @@ header::after {
 	}
 
 	#site-title {
+		line-height: 1;
 		font-size: rem-calc(40);
 		font-weight: bold;
 		text-transform: uppercase;
